# spheroseg

./: .cursorrules  .env  .env.example  .eslintrc.cjs  .eslintrc.js  .gitignore  .jscpd.json  .lintstagedrc.js  .markdownlint.json  .pre-commit-config.yaml  .prettierrc.js  .windsurfrules  ALL_PR_REVIEWS_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_ISSUES_SUMMARY.md  CLAUDE.md  CONSOLE_STATEMENT_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DUPLICATE_IMPLEMENTATIONS_REPORT.md  Dockerfile  Dockerfile.frontend  EXPORT_FORMATS_IMPLEMENTATION.md  FIX_SUMMARY.md  GEMINI.md  INVITATION_ROUTE_UPDATE.md  PERFORMANCE_BASELINE_REPORT.md  PERFORMANCE_FIXES_IMPLEMENTED.md  PERFORMANCE_TROUBLESHOOTING_FINAL.md  PHASE_4_INTEGRATION_COMPLETE.md  PR10_DOCUMENTATION_CLEANUP_REVIEW.md  PR1_TEST_INFRASTRUCTURE_REVIEW.md  PR2_ERROR_TRACKING_REVIEW.md  PR3_MIDDLEWARE_REVIEW.md  PR4_CACHING_REVIEW.md  PR5_BACKEND_TESTS_FIXES.md  PR5_BACKEND_TESTS_REVIEW.md  PR6_FRONTEND_TESTS_REVIEW.md  PR7_MONITORING_REVIEW.md  PR8_FRONTEND_API_CLIENT_REVIEW.md  (+115 more)
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  create_test_user.py  create_user.py  entrypoint.sh  eslint.config.js  jest.config.js  main.py  ml-test-results.json  module-alias.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  wait-for-it.sh
backend/api/: auth.py  images.py  projects.py  segmentation.py  users.py
backend/app/: Dockerfile  main.py
backend/db/: database.py  migration.sql  run_migration.py
backend/models/: models.py
backend/src/: main.py  (+1 more)
(+731 files in other folders)
