[tool.poetry]
name = "spheroseg-backend"
version = "0.1.0"
description = "Backend for SpheroSeg application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
celery = "^5.3.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
minio = "^7.2.0"
psycopg2-binary = "^2.9.0"
alembic = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.0.0"
isort = "^5.12.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"